fix: header spacing to house new menu items

--- a/wp-content/themes/serendipity-psychology/_resources/styles/partials/core.css
+++ b/wp-content/themes/serendipity-psychology/_resources/styles/partials/core.css
@@ -24,7 +24,7 @@ body {
 } */
 
 .container {
-  @apply w-full px-4 2xs:px-6 md:px-8 lg:px-6 xl:px-10 mx-auto;
+  @apply w-full px-4 2xs:px-6 md:px-8 lg:px-5 xl:px-10 mx-auto;
   max-width: calc(theme("screens.4xl") + theme("spacing.8"));
 }
 
